
  [ Colin Watson ]
  * Make sure to load translations for "USB" and "CD" on the language page
    (LP: #958249).
  * Sort existing images in the face selector by filename.
  * Force face selector icon view to a two-column layout, in lieu of better
    geometry management (LP: #961025).
  * Refactor ubiquity.misc.grub_default to make it testable, and add tests
    for it.

  [ Oliver Grawert ]
  * bin/oem-config-firstboot: do not reset debconf user data in automatic mode
  * ubiquity/plugins/ubi-tasks.py: run tasksel with --new-install option in
    automatic mode (this still doesnt make tasksel work, but at least skips
    the debconf question if tasksel isnt in the preseed file, to install
    packages late-command needs to be used atm.
  * bin/ubiquity: make debconf not re-show seen questions again in automatic mode
  * all the above fixes (LP: #924018), example boot.scr and preseed.cfg file are
    attached to the bug, thanks to colin for all the fixes and the hard work.

  [ Barry Warsaw ]
  * Do not offer to install the boot loader on device paths on which
    incompatible file systems will be installed (e.g. XFS).
    (LP: #959724)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 21 Mar 2012 13:08:44 -0400

ubiquity (2.9.31) precise; urgency=low

  [ Colin Watson ]
  * Fix misc.set_indicator_keymaps to handle ll_CC forms of lang, and also
    to avoid crashing on unknown languages in general (LP: #960047).
  * Strip invalid characters from default username (LP: #783295).
  * Automatic update of included source packages: base-installer
    1.122ubuntu6, console-setup 1.70ubuntu4, partman-basicmethods 49,
    partman-jfs 35, partman-newworld 26, partman-partitioning 83ubuntu2,
    partman-reiserfs 52, partman-xfs 49.

  [ Oliver Grawert ]
  * add support for automatic-oem-config kernel commandline option to the
    oem-config startup scripts to switch oem-config into automatic mode for
    preseeded oem installs